# SimpleImageLabler

./: CMakeLists.txt  README.md
include/: const.h  labeler.h  rect.h  util.h
src/: labeler.cpp  main.cpp  rect.cpp  util.cpp
